--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <div class="Google-login">
                 <div class="login-image">
-                    <img src="image/1.jpg" alt="" height="40px">
+                    <img src="1.jpg" alt="" height="40px">
                 </div>
             </div>
 
